常规维护，暂时不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/import_js_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/import_js_admin.html
@@ -1,7 +1,9 @@
 ﻿<!--/*******底部引入js*******/-->
+<!--/* Toastr */-->
+<script th:src="@{/resources/vendor/other/toastr/toastr.min.js}"></script>
 <!--/* Mainly scripts */-->
 <script th:src="@{/resources/vendor/tgLayui/lay/dest/layui.all.js}" charset="utf-8"></script>
-<script th:src="@{/resources/js/common/tg_fore_common.js}" charset="utf-8"></script>
+<script th:src="@{/resources/js/common/tg_common.js}" charset="utf-8"></script>
 <script th:inline="javascript">
     /*<![CDATA[*/
     var BASE_URL = /*[[@{/}]]*/;
