--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/info/infoList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/info/infoList.html
@@ -1,21 +1,16 @@
-<header class="main-box-header clearfix">
-	<div class="row m-b-sm m-t-sm">
-		<div class="col-md-8">
-			<button id="infoAddBtn" th:href="@{/admin/m/base/info/add_{nodeId}.gsp(nodeId=${nodeId})}" th:disabled="${nodeId=='0'}" class="btn btn-primary btn-sm" type="button">
-				<i class="fa fa-plus"></i>&nbsp;新增
-			</button>
-		</div>
-		<div class="col-md-4">
-			<input type="hidden" id="nodeId" th:value="${nodeId}" />
-			<div class="input-group">
-				<input name="simpleQueryParam" type="text" placeholder="请输入关键字搜索" class="form-control" /> <span class="input-group-btn">
-					<button onclick="myTable.filter()" type="button" class="btn btn-sm btn-primary">搜索</button>
-				</span>
+<!--/*******操作*******/-->
+<div class="layui-form-item">
+	<blockquote class="layui-elem-quote layui-quote-nm">
+		<div class="layui-inline">
+			<div class="layui-input-inline">
+				<button id="infoAddBtn" th:href="@{/admin/m/base/info/add_{nodeId}.gsp(nodeId=${nodeId})}" th:classappend="${nodeId==null}?layui-btn-disabled" class="layui-btn">
+					<i class="layui-icon">&#xe61f;</i> 新增
+				</button>
 			</div>
 		</div>
-	</div>
-</header>
-<table id="infoDataTable" class="table table-striped table-hover">
+	</blockquote>
+</div>
+<table id="infoDataTable" class="layui-table">
 	<thead>
 		<tr>
 			<th width="60" class="text-center">#</th>
@@ -29,92 +24,42 @@
 			<th width="120" class="text-center">操作</th>
 		</tr>
 	</thead>
-	<tbody id="dataTableDiv">
+	<tbody>
+		<tr th:if="${result == null or result.size() == 0}">
+			<td colspan="9" style="text-align: center;">暂时没有数据</td>
+		</tr>
+		<tr th:each="item,items:${result}">
+			<td th:text="${items.index+1}" style="text-align: center;">序号</td>
+			<td th:text="${item.state==1?'已发布':'未发布'}">状态</td>
+			<td th:text="${item.noddName}">所属栏目</td>
+			<td th:text="${item.title}">主标题</td>
+			<td th:text="${item.publishTime!=null?#dates.format(item.publishTime,'yyyy-MM-dd'):''}">发布日期</td>
+			<td th:text="${item.createDataUsername}">创建者</td>
+			<td th:text="${item.sortOrder}">排序</td>
+			<td th:text="${item.viewsCount}">浏览总数</td>
+			<td style="text-align: center;"><button class="layui-btn layui-btn-small" th:href="@{/admin/m/base/info/edit_{id}.gsp(id=${item.id})}" onclick="loadEditInfo(this)">
+					<i class="layui-icon">&#xe642;</i>
+				</button>
+				<button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
+					<i class="layui-icon">&#xe640;</i>
+				</button></td>
+		</tr>
 	</tbody>
 </table>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null,
-        "class" : "text-center"
-    }, {
-        "data" : "state",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return '<span class="text-success">已发布</span>';
-            } else {
-                return '<span class="text-danger">未发布</span>';
-            }
-        }
-    }, {
-        "data" : "noddName"
-    }, {
-        "data" : "title"
-    }, {
-        "data" : "publishTime",
-        "class" : "text-center"
-    }, {
-        "data" : "createDataUsername",
-        "class" : "text-center"
-    }, {
-        "data" : "sortOrder",
-        "class" : "text-center"
-    }, {
-        "data" : "viewsCount",
-        "class" : "text-center"
-    }, {
-        "data" : null,
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var editUrl = /*[[@{/admin/m/base/info/edit_{id}.gsp}]]*/'';
-            var result = '<button href="' + editUrl.replace("{id}", row.id) + '" onclick="loadEditInfo(this)" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></button>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-        d.nodeId = $('#nodeId').val() == '0' ? '' : $('#nodeId').val();
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/info/list.gsp}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/base/info/delete_}]]*/'url',
-        enableUrl : /*[[@{/admin/m/base/info/enable_}]]*/'url',
-        disableUrl : /*[[@{/admin/m/base/info/disable_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'infoDataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : true, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : false
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
-
     $('#infoAddBtn').click(function() {
         $("#infoContent").load($(this).attr('href'));
     });
     function loadEditInfo(obj) {
         $("#infoContent").load($(obj).attr('href'));
+    }
+    
+    var deleteUrl = /*[[@{/admin/m/base/info/delete_{id}.gsp}]]*/;
+    function deleted(id) {
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });
     }
     /*]]>*/
 </script>
