--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/info/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/info/list.html
@@ -4,90 +4,77 @@
 <title th:text="|#{customer.systemTitle}-内容管理-文章管理|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
 <!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/tgCube/css/libs/datepicker.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/treeTable/themes/vsStyle/treeTable.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/webuploader/webuploader.css}" rel="stylesheet" />
 <!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=content,current=info)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=内容管理,current=文章管理)">面包屑栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=content,child=info)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>内容管理</cite></a> <a th:href="@{/manage/m/task/list.htm?type=2}">文章管理</a> <a><cite>列表</cite></a>
+					</span>
+				</div>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="main-box">
 							<div class="main-box-body clearfix">
 								<br />
-								<div class="col-md-2">
-									<table id="nodeDataTable" class="table table-hover">
-										<tbody></tbody>
-									</table>
+								<div class="site-tree">
+									<ul class="layui-tree" id="nodeTree">
+									</ul>
 								</div>
-								<div class="col-md-10" id="infoContent"></div>
+								<div class="site-content" style="width: 1399px;" id="infoContent"></div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
 <!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
 <!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/bootstrap-datepicker.js}"></script>
-<script th:src="@{/resources/vendor/treeTable/jquery.treeTable.min.js}"></script>
 <!-- ueditor -->
 <script th:src="@{/resources/vendor/ueditor/ueditor.config.js}"></script>
 <script th:src="@{/resources/vendor/ueditor/ueditor.all.min.js}"></script>
 <!--/* web uploader */-->
-<script th:src="@{/resources/vendor/webuploader/webuploader.js}"></script>
 <script th:src="@{/resources/js/common/formBuilder.js}"></script>
 <!--/* 模板引擎生成数据 */-->
 <script th:inline="javascript">
     /*<![CDATA[*/
     //加载完成后执行
+    var $ = layui.jquery;
+    var jQuery = layui.jquery;
     $(function() {
         loadTreeData();
-        loadInfoByNode("0")
+        loadInfoByNode("0");
     });
     function loadInfoByNode(nodeId) {
-        $("#nodeDataTable tr").removeClass("active");
-        $("#nodeDataTable tr[id='" + nodeId + "'").addClass("active");
-        var infoListUrl = /*[[@{/admin/m/base/info/infoList_}]]*/'';
-        $("#infoContent").load(infoListUrl + nodeId + '.gsp');
+        $("#nodeTree li").removeClass("layui-this");
+        $("#nodeTree li[id='" + nodeId + "'").addClass("layui-this");
+        var infoListUrl = /*[[@{/admin/m/base/info/infoList.gsp}]]*/'';
+        $("#infoContent").load(infoListUrl + '?nodeId=' + nodeId);
     }
     function loadTreeData() {
         var listUrl = /*[[@{/admin/m/base/node/list.gsp}]]*/'';
         tg_simpleAjaxPost(listUrl, null, function(d) {
             var result = $.parseJSON(d);
             var records = result.records;
-            $("#nodeDataTable tbody").html("");
+            $("#nodeTree").html("");
             for (var i = 0; i < records.length; i++) {
                 var record = records[i];
-                var $tr = $('<tr style="cursor: pointer;" onclick="loadInfoByNode(\'' + record.id + '\')"></tr>').attr("id", record.id).attr("pId", record.parentId);
-                $tr.append($('<td></td>').html('<a href="#">' + record.noddName + '</a>'));
-                $("#nodeDataTable tbody").append($tr);
+                var $tr = '<li class="site-tree-noicon" id="' + record.id + '" onclick="loadInfoByNode(\'' + record.id + '\')"><a href="#"><cite>' + record.noddName + '</cite></a></li>'
+                $("#nodeTree").append($tr);
             }
-
-            $('#nodeDataTable').treeTable({
-                expandLevel : 3
-            });
         });
     }
     /*]]>*/
 </script>
+<!--/***** 当前页js end *****/-->
 </html>
