--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/list.html
@@ -1,147 +1,99 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-全局配置-模型配置|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=gconfig,current=model)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=全局配置,current=模型配置)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-9">
-								<a th:href="@{/admin/m/base/model/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
+		<div th:replace="fragments/menu_admin::menu(parent=gconfig,child=model)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">模型配置</a> <a><cite>列表</cite></a>
+					</span>
+				</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 模型配置
+				</blockquote>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/m/base/model/list.gsp}" method="get">
+					<div class="layui-form-item">
+						<blockquote class="layui-elem-quote layui-quote-nm">
+							<div class="layui-inline">
+								<div class="layui-input-inline">
+									<a th:href="@{/admin/m/base/model/add.gsp}" class="layui-btn">新增</a>
+								</div>
 							</div>
-							<div class="col-md-3">
-								<div class="form-group">
-									<select id="modelType" name="type" class="form-control">
+							<div class="layui-inline" style="float: right;">
+								<div class="layui-input-inline" style="width: 200px;">
+									<select id="modelType" name="type" class="layui-select">
+										<option value="" selected>---请选择模型类型---</option>
 										<option value="info">文档模型</option>
 										<option value="node">栏目模型</option>
 										<option value="special">专题模型</option>
 									</select>
 								</div>
+								<button class="layui-btn" lay-submit="" lay-filter="searchForm">
+									<i class="layui-icon">&#xe615;</i>
+								</button>
 							</div>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th width="60" class="text-center">#</th>
-									<th>类型</th>
-									<th>名称</th>
-									<th>备注</th>
-									<th width="200" class="text-center">操作</th>
-								</tr>
-							</thead>
-						</table>
+						</blockquote>
 					</div>
-				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				</form>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th width="40" class="text-center">#</th>
+							<th>类型</th>
+							<th>名称</th>
+							<th>备注</th>
+							<th width="200" class="text-center">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${modelList == null or modelList.size() == 0}">
+							<td colspan="6" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,itemStat:${modelList}">
+							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
+							<td style="text-align: center;"><label th:if="${item.type=='info'}">文档模型</label> <label th:if="${item.type=='node'}">栏目模型</label> <label th:if="${item.type=='special'}">专题模型</label></td>
+							<td th:text="${item.modelName}" style="text-align: center;"></td>
+							<td th:text="${item.description}" style="text-align: center;"></td>
+							<td><a th:href="|@{/admin/m/base/model/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:href="|@{/admin/m/base/customField/fields_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon">字段管理</i></a> <a
+								th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/* 排序 */-->
-<script th:src="@{/resources/vendor/other/sortable/Sortable.min.js}"></script>
-<!--/***** 当前页js end *****/-->
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来拖拽
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来拖拽
-        "data" : null,
-        "class" : "text-center"
-    }, {
-        "data" : "type",
-        render : function(data, type, row, meta) {
-            if (data == 'info') {
-                return '<span class="text-success">文档模型</span>';
-            } else if (data == 'node') {
-                return '<span class="text-success">栏目模型</span>';
-            } else if (data == 'special') {
-                return '<span class="text-success">专题模型</span>';
+    var result = /*[[${modelList}]]*/;
+    $(function(){
+        $("#modelType").val(GetQueryString("type"));
+        var option = {
+            listUrl : /*[[@{/admin/m/base/model/list.gsp?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
+                modelType
             }
-            return data;
-        }
-    }, {
-        "data" : "modelName"
-    }, {
-        "data" : "description"
-    }, {
-        "data" : null, //最后一列，操作按钮
-        "class" : "text-center",
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var editFieldUrlPre = /*[[@{/admin/m/base/customField/fields_{id}.gsp}]]*/'url';
-            var result = '';
-            //修改按钮
-            result += '<a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-            //字段管理
-            result += ' <a href="' + editFieldUrlPre.replace("{id}", row.id) + '" data-target="#commonWin" class="btn btn-info btn-xs" type="button" data-toggle="modal"><i class="fa fa-edit"></i>&nbsp;字段管理</a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.type = $('#modelType').val();
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/model/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/base/model/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/base/model/delete_}]]*/'url',
-        enableUrl : /*[[@{/admin/m/base/model/enable_}]]*/'url',
-        disableUrl : /*[[@{/admin/m/base/model/disable_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : false, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
-    $("#modelType").change(function() {
-        myTable.refresh();
-    });
+        };
+        tg_basePage(option);
+    })
+     var deleteUrl = /*[[@{/admin/m/base/model/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
+    }
     /*]]>*/
 </script>
-<div th:replace="common/common_window::window(windowId=customFieldWin)">公共弹出窗口</div>
-</html>
