--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/publishPoint/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/publishPoint/list.html
@@ -3,130 +3,67 @@
 <head>
 <title th:text="|#{customer.systemTitle}-图灵谷-全局配置-发布点配置|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=gconfig,current=publishPoint)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=全局配置,current=发布点配置)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<h2>发布点配置</h2>
-					</header>
-					<div class="main-box-body clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-8">
-								<a th:href="@{/admin/m/base/publishPoint/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-							</div>
-						</div>
-						<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover ">
-							<thead>
-								<tr>
-									<th width="60">#</th>
-									<th>名称</th>
-									<th>发布类型</th>
-									<th>发布方式</th>
-									<th>描述</th>
-									<th width="120">操作</th>
-								</tr>
-							</thead>
-						</table>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=gconfig,child=publishPoint)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">发布点配置</a> <a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 发布点配置
+				</blockquote>
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/m/base/publishPoint/add.gsp}" class="layui-btn">新增</a>
+						</div>
+					</div>
+				</blockquote>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th width="40">#</th>
+							<th>名称</th>
+							<th>发布类型</th>
+							<th>发布方式</th>
+							<th>描述</th>
+							<th width="90">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${PPList == null or PPList.size() == 0}">
+							<td colspan="8" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,itemStat:${PPList}">
+							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
+							<td th:text="${item.pName}" style="text-align: center;"></td>
+							<td style="text-align: center;"><label th:if="${item.pType==1}">HTML发布点</label><label th:if="${item.pType==2}">附件发布点</label></td>
+							<td style="text-align: center;"><label th:if="${item.pMethod==1}">文件系统</label><label th:if="${item.pMethod==2}">FTP</label></td>
+							<td th:text="${item.description}"></td>
+							<td><a th:href="|@{/admin/m/base/publishPoint/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/***** 当前页js end *****/-->
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<!--/* 模板引擎生成数据 */-->
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null
-    }, {
-        "data" : "pName"
-    }, {
-        "data" : "pType",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return "<span>HTML发布点</span>";
-            } else if (data === 2) {
-                return "<span>附件发布点</span>";
-            }
-        }
-    }, {
-        "data" : "pMethod",
-        render : function(data, type, row, meta) {
-            if (data === 1) {
-                return "<span>文件系统</span>";
-            } else if (data === 2) {
-                return "<span>FTP</span>";
-            }
-        }
-    }, {
-        "data" : "description"
-    }, {
-        "data" : null, //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var result = '';
-            //修改按钮
-            result += ' <a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/publishPoint/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/base/publishPoint/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/base/publishPoint/delete_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : true, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
+    var deleteUrl = /*[[@{/admin/m/base/publishPoint/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
+    }
     /*]]>*/
 </script>
 </html>
