--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/list.html
@@ -1,133 +1,68 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-全局配置-模型配置|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/treeview//bootstrap-treeview.css}" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/codemirror/ambiance.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/codemirror/codemirror.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=gconfig,current=template)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=全局配置,current=模板配置)">面包屑栏</div>
-				<div class="main-box clearfix">
-					<header class="main-box-header clearfix">
-						<div class="row m-b-sm m-t-sm">
-							<div class="col-md-9">
-								<a th:href="@{/admin/m/base/template/add.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;新增</a>
-							</div>
-						</div>
-					</header>
-					<div class="main-box-body clearfix">
-						<div class="col-xs-4">
-							<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover">
-								<thead>
-									<tr>
-										<th width="60" class="text-center">#</th>
-										<th>模板名称</th>
-										<th>模板代码</th>
-										<th width="200" class="text-center">操作</th>
-									</tr>
-								</thead>
-							</table>
-						</div>
-						<div class="col-xs-8" id="fileManage"></div>
-					</div>
+		<div th:replace="fragments/menu_admin::menu(parent=gconfig,child=template)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">模版配置</a> <a><cite>列表</cite></a>
+					</span>
 				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 模版配置
+				</blockquote>
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/m/base/template/add.gsp}" class="layui-btn">新增</a>
+						</div>
+					</div>
+				</blockquote>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th width="40px" class="text-center">#</th>
+							<th>模板名称</th>
+							<th>模板代码</th>
+							<th width="200px" class="text-center">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${templateList == null or templateList.size() == 0}">
+							<td colspan="6" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,itemStat:${templateList}">
+							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
+							<td th:text="${item.templateName}" style="text-align: center;"></td>
+							<td th:text="${item.codeNum}" style="text-align: center;"></td>
+							<td>
+							<a th:href="|@{/admin/m/base/template/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a>
+							<a th:href="|@{/admin/m/base/template/templateTab_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon">模版编辑</i></a>  
+							<a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<script th:src="@{/resources/vendor/bootstrap/plugins/treeview/bootstrap-treeview.js}"></script>
-<!-- CodeMirror -->
-<script th:src="@{/resources/vendor/codemirror/codemirror.js}"></script>
-<script th:src="@{/resources/vendor/codemirror/mode/javascript/javascript.js}"></script>
-<!--/***** 当前页js end *****/-->
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来拖拽
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来拖拽
-        "data" : null,
-        "class" : "text-center"
-    }, {
-        "data" : "templateName"
-    }, {
-        "data" : "codeNum"
-    }, {
-        "data" : null, //最后一列，操作按钮
-        "class" : "text-center",
-        render : function(data, type, row, meta) {
-            var editUrlPath = myTable.editUrl + row.id + ".gsp"; //修改地址
-            var editTemplateUrlPre = /*[[@{/admin/m/base/template/templateTab_{id}.gsp}]]*/'url';
-            var result = '';
-            //修改按钮
-            result += '<a href="'+editUrlPath+'" data-target="#commonWin" data-toggle="modal" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>';
-            //模板编辑
-            result += ' <button loadurl="' + editTemplateUrlPre.replace("{id}", row.id) + '" class="btn btn-info btn-xs" onclick="loadFileManage(this)" type="button"><i class="fa fa-file"></i><span>&nbsp;模板编辑</span></button>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/template/list.gsp}]]*/'url',
-        editUrl : /*[[@{/admin/m/base/template/edit_}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/base/template/delete_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : false, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : true
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
-
-    function loadFileManage(obj) {
-        var $this = $(obj);
-        $("#fileManage").tab('show');
-        $("#fileManage").load($this.attr('loadurl'));
+    var deleteUrl = /*[[@{/admin/m/base/template/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
     }
     /*]]>*/
 </script>
-<div th:replace="common/common_sm_window::window(windowId=templateWin)">公共弹出窗口</div>
-</html>
