常规维护 暂时不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/about.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/about.html
@@ -71,23 +71,27 @@
 								<th><strong>发布时间</strong></th>
 								<th><strong>版本</strong></th>
 								<th><strong>代号</strong></th>
+								<th><strong>说明</strong></th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
 								<td>2016-07-15</td>
 								<td>V2.1</td>
-								<td>橡皮糖（糖果还未成形，架构变动较大，就叫橡皮糖吧）</td>
+								<td>橡皮糖</td>
+								<td>糖果还未成形，架构变动较大，就叫橡皮糖吧</td>
 							</tr>
 							<tr>
 								<td>2016-01-21</td>
 								<td>V1.1</td>
-								<td>麦芽糖（糖果还未成形，架构变动较大，就叫麦芽糖吧）</td>
+								<td>麦芽糖</td>
+								<td>糖果还未成形，架构变动较大，就叫麦芽糖吧</td>
 							</tr>
 							<tr>
 								<td>2015-10-26</td>
 								<td>V0.9</td>
-								<td>棉花糖（糖果还未成形，就叫她棉花糖吧）</td>
+								<td>棉花糖</td>
+								<td>糖果还未成形，就叫她棉花糖吧</td>
 							</tr>
 						</tbody>
 					</table>
@@ -107,7 +111,7 @@
 						<a href="mailto:service@turingoal.com">service@turingoal.com</a>
 					</p>
 					<p>
-						糖果CMS交流QQ群 <a href="https://jq.qq.com/?_wv=1027&k=42iumHc" target="_blank">512177870</a>
+						糖果CMS交流QQ群：<a href="https://jq.qq.com/?_wv=1027&k=42lHW1p" target="_blank">点击加入 512177870</a>
 					</p>
 				</blockquote>
 			</div>
